<resources>
    <string name="app_name">Life Donors</string>
    <string name="title_activity_login">Oturum açın</string>
    <string name="home">Ana Sayfa</string>
    <string name="profile">Profil</string>
    <string name="social_media">Sosyal Medya</string>
    <string name="achiev">Başarılar</string>
    <string name="signup">Kaydol</string>
    <string name="prompt_email">E-posta</string>
    <string name="register">Hesap oluşturun</string>
    <string name="forgotpass">Parolanızı mı unuttunuz?</string>
    <string name="prompt_password">Parola</string>
    <string name="prompt_confirm_password">Parolayı onayla</string>
    <string name="action_sign_in_short">Oturum açın</string>
    <string name="navigation_drawer_open">Navigasyon çekmecesini aç</string>
    <string name="navigation_drawer_close">Navigasyon çekmecesini kapat</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigasyon başlığı</string>
    <string name="reset">Sıfırla</string>
    <string name="displayName">Ad Soyad</string>
    <string name="mobile">Cep Telefonu</string>
    <string name="userAddress">Adres</string>
    <string name="nearH">En yakın hastaneleri bulun</string>
    <string name="fndBlood">Kan bağışçısı bulun</string>
    <string name="lgout">Çıkış yap</string>
    <string name="devinfo">Hakkımızda</string>
    <string name="bloodinfo">Kan Bilgisi</string>
    <string name="BloodGroup">Kan Grubu</string>
    <string name="Division">Bölge Seçin</string>
    <string name="Post">Gönder</string>
    <string-array name="division_list">
        <item>Istanbul</item>
        <item>Ankara</item>
        <item>Izmir</item>
        <item>Bursa</item>
        <item>Adana</item>
        <item>Gaziantep</item>
        <item>Konya</item>
        <item>Antalya</item>
    </string-array>
    <array name="gender">
        <item>Erkek</item>
        <item>Kadın</item>
    </array>
    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>
    <string name="why_donate">Neden Kan Bağışlamalısınız?</string>
    <string name="eligibility_">Kan Bağışlama Şartları</string>
    <string name="female_">Eğer kadınsanız, sağlıklı olmalı ve kendinizi iyi hissetmelisiniz\nBirçok eyalette en az 17 yaşında olmalısınız\nEn az 5 fit 5 inç boyunda olmalısınız\nEn az 150 pound ağırlığında olmalısınız.</string>
    <string name="male_">Eğer erkekseniz, sağlıklı olmalı ve kendinizi iyi hissetmelisiniz\nBirçok eyalette en az 17 yaşında olmalısınız\nEn az 5 fit 1 inç boyunda olmalısınız\nEn az 130 pound ağırlığında olmalısınız.</string>
    <string name="info_">Kan bağışlamak hayat kurtarır. Verdiğiniz kan acil durumlarda ve uzun süreli tedavileri olan insanlar için bir can simididir. Bağışçılar cömertçe kan vermeseydi bugün birçok kişi hayatta olmazdı. \n\nNeden kan vermenize ihtiyacımız var?\n\nGünlük 6000\'den fazla kan bağışına ihtiyacımız var. Kan bağışı yapmak için çoğu insanın 17–65 yaş arasında olması gerekiyor. Şu anda mevcut bağışçılarımızın yarısı 45 yaşın üzerinde olduğundan, daha genç insanların kan bağışına başlaması gerekiyor.</string>
    <string name="aboutus">Bu kan bağışı ve toplama hakkında demo bir projedir. Ekibimiz şunlardan oluşmaktadır: \n 1. Orhun Parmaksız\n 2. Adil Ata Şahin\n 3. Berkay Şengül\n </string>
</resources>